05 - Fixed css & social icons are visible now

--- a/assets/css/media queries/mobile.css
+++ b/assets/css/media queries/mobile.css
@@ -19,7 +19,7 @@
 
 @media screen and (min-width: 576px) {
   .home__img img {
-    width: 330px;
+    width: 360px;
   }
 
   .contact__form {
